--- a/client/src/components/Paginator/Paginator.scss
+++ b/client/src/components/Paginator/Paginator.scss
@@ -27,7 +27,7 @@
         .Button:not(:last-child) {
             margin-right: 3rem;
 
-            @media only screen and (max-width: 56.25em) {
+            @media only screen and (max-width: 75em) {
                 margin-right: 2rem;
             }
 
